# rust_nRF52833

./: .gitattributes  Cargo.toml  LICENSE  README.md
a1_light/: Cargo.toml  README.md
a1_light/.cargo/: config.toml
a1_light/examples/: nrf_hal_imp.rs
a1_light/src/: main.rs
a2_blink/: Cargo.toml  README.md
a2_blink/examples/: nrf_hal_imp.rs  nrf_hal_imp_2.rs  nrf_hal_timer_blinky.rs
a2_blink/src/: main.rs
a3_light_all/: Cargo.toml  README.md
a3_light_all/src/: main.rs
a4_roulette/: Cargo.toml  README.md
a4_roulette/a4_utils/: Cargo.toml
a4_roulette/a4_utils/src/: lib.rs
a4_roulette/src/: main.rs
b1_echo/: Cargo.toml  README.md
b1_echo/b1_utils/: Cargo.toml
b1_echo/src/: main.rs
c1_sensors/: Cargo.toml  README.md
c1_sensors/src/: main.rs
d1_click/: Cargo.toml  README.md
d1_click/examples/: btn_blnky_interrupt.rs  btn_blnky_polling.rs  btn_press_counter_interrupt.rs  btn_press_counter_interrupt_ISR.rs
d1_click/src/: main.rs
e1_microphone/: Cargo.toml  README.md
e1_microphone/examples/: nrf_hal_imp.rs
e1_microphone/src/: main.rs
f1_real_time_timer/: Cargo.toml  README.md
f1_real_time_timer/examples/: complete_timer.rs  whack_a_mole.rs
f1_real_time_timer/src/: main.rs
g1_led_fading/: Cargo.toml  README.md
g1_led_fading/examples/: led_fading.rs  without_delay.rs
g1_led_fading/src/: main.rs
h1_buzzer/: Cargo.toml  README.md
h1_buzzer/src/: main.rs
i1_uart_console/: Cargo.toml  README.md
i1_uart_console/src/: main.rs
microbit-display/: Cargo.toml
serial_utils/: Cargo.toml  README.md
z1_embassy_blinky/: Cargo.toml  README.md
z1_embassy_blinky/src/: main.rs
z2_embassy_timer/: Cargo.toml  README.md
z2_embassy_timer/src/: main.rs
z3_embassy_led_cycling/: Cargo.toml  README.md
z3_embassy_led_cycling/src/: main.rs
z4_embassy_uart_echo/: Cargo.toml  README.md
z4_embassy_uart_echo/src/: main.rs
z5_embassy_click_counter/: Cargo.toml  README.md
z5_embassy_click_counter/src/: main.rs
