[workspace]
members = [
    "a1_light",
    "a2_blink",
    "a3_light_all",
    "a4_roulette",
    "a4_roulette/a4_utils",
    "b1_echo",
    "c1_sensors",
    "d1_click",
    "e1_microphone",
    "f1_real_time_timer",
    "g1_led_fading",
    "h1_buzzer",
    "i1_uart_console",
    "serial_utils",
    "z1_embassy_blinky",
    "z2_embassy_timer",
    "z3_embassy_led_cycling",
    "z4_embassy_uart_echo",
]
resolver = "2"
