[package]
name = "b1_echo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
heapless = "0.8.0"
microbit-v2 = "0.15.1"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

[dependencies.b1_utils]
version = "0.1.0"
path = "b1_utils"
