[package]
name = "z3_embassy_led_cycling"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-nrf = { version = "0.3.1", features = [
    "nrf52833",
    "time",
    "time-driver-rtc1",
    "gpiote"
] }
embassy-time = "0.4.0"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
embassy-sync = "0.6.0"