[package]
name = "z5_embassy_click_counter"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-nrf = { version = "0.3.1", features = ["gpiote", "nrf52833"] }
embassy-sync = "0.6.2"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
